# Protein-Internal-Energy

./: README.md
CRD_File_py_src/: InternalEnergyMethods.py  main.py  proteinScoreDifference10.csv  proteinScoreDifference100.csv  readme.md  scoreCompareMain.py
PDB_File_py_src/: main.py
Share/Written Report Files and Notes/: ECS 129 - Final Report.docx
cpp_src/: CMakeLists.txt  a.out  main.cpp  protein1.txt  protein2.txt
data/: model1.crd  model2.crd
